# wallapop_nuevos_productos

./: Cargo.toml  README.md
src/: main.rs
src/base_datos/: conexion.rs  mod.rs  tabla.rs
src/cliente_http/: mod.rs
src/configurar/: archivo_configuracion.rs  mod.rs  wallapop_urls.rs
src/manejador/: comprobar.rs  consultar.rs  crear.rs  mod.rs  notificar.rs
